main.css
body {
    min-height: 100vh;
    font-family: "Poppins", var(--bs-font-sans-serif);
}
main#main-page {
    display: flex;
    flex-wrap: nowrap;
    height: 100vh;
}
#sidebar {
    width: 280px;
    background: #1E1E2D;
}
.custom-scrollable {
    overflow-y: scroll;
}
.custom-scrollable::-webkit-scrollbar {
    width: 13px;
}
.custom-scrollable::-webkit-scrollbar-thumb {
    border: 5px solid rgba(0, 0, 0, 0);
    background-clip: padding-box;
    background-color: transparent;
}
#sidebar:hover .custom-scrollable::-webkit-scrollbar-thumb {
    background-color: #637099;
}
.custom-scrollable::-webkit-scrollbar-thumb:hover {
    background-color: #7987b1 !important;
}
#sidebar-nav span {
    font-size: 13px;
}
#sidebar-nav a > i:first-of-type {
    width: 1.1rem;
    text-align: center;
}
#sidebar-nav a {
    padding: 11px 16px;
}
#sidebar-nav .nav-link i {
    color: #494b74;
}
#sidebar-nav .nav-link {
    color: #a2a3b7;
    transition: none;
    border-radius: 0;
}
#sidebar-nav .nav-link.active,
#sidebar-nav .nav-link.collapse-btn:not(.collapsed) {
    background: #1b1b28;
    color: #ffffff;
}
#sidebar-nav .nav-link.active .fa-chevron-right,
#sidebar-nav .nav-link.collapse-btn:not(.collapsed) .fa-chevron-right {
    color: #ffffff;
}
#sidebar-nav .nav-link:hover .fa-chevron-right {
    background: #1b1b28;
    color: #ffffff;
}
#sidebar-nav .nav-link.active .nav-item-icon,
#sidebar-nav .nav-link.collapse-btn:not(.collapsed) .nav-item-icon{
    color: #3699FF;
}
#sidebar-nav .nav-link:hover {
    background: #1b1b28;
    color: #ffffff;
}
#sidebar-nav .nav-link:hover .nav-item-icon {
    color: #3699FF;
}
#sidebar-nav .nav-link i.fa-chevron-right {
    transition-duration: 0.25s;
}
#sidebar-nav .nav-link:not(.collapsed) i.fa-chevron-right {
    transform: rotate(90deg);
}
#sidebar-nav ul.sidebar-sub-nav {
    list-style: none;
    margin: 0;
    padding: 0;
}
#sidebar-nav ul.sidebar-sub-nav li a {
    padding-left: 45px;
}
#sidebar-nav .menu-section {
    margin: 20px 0 0 0;
    padding: 0 1rem;
}
#sidebar-nav .menu-section h5 {
    color: #4c4e6f;
    font-size: 0.9rem;
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 0.3px;
}
.sidebar-badge {
    border-radius: 0.42rem;
    padding: 2px 7px;
    font-size: 10px !important;
}
.sidebar-blue-badge {
    background: #3699FF;
    color: #FFF;
}
.sidebar-red-badge {
    background: #F64E60;
    color: #FFF;
}

#user-dropdown {
    padding: 5px 5px 5px 7px;
    border-radius: 4px;
}
#user-dropdown:hover,
#user-dropdown.show {
    background: rgba(77, 89, 149, 0.06);
}
#user-dropdown-menu {
    margin-top: 15px;
    -webkit-box-shadow: 0px 0px 50px 0px rgb(82 63 105 / 15%);
    box-shadow: 0px 0px 50px 0px rgb(82 63 105 / 15%);
    border-radius: 5px;
}
#user-dropdown-menu li.user-menu-item:not(:last-of-type) {
    margin-bottom: 5px;
}
#user-dropdown-menu li.user-menu-item i {
    background: #F3F6F9;
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 4px;
    margin-right: 12px;
    font-size: 16px;
}
.user-menu-item .color-green {
    color: #1BC5BD;
}
.user-menu-item .color-blue {
    color: #3699FF;
}
.user-menu-item .color-red {
     color: #F64E60;
 }
#user-dropdown-menu .user-menu-item-text {
    font-size: 13px;
}
#user-dropdown-menu .user-menu-item-text span:first-child {
    font-weight: 500;
    color: #3F4254;
}
#user-dropdown-menu .user-menu-item-text span:nth-child(2) {
    color: #B5B5C3;
}
#user-dropdown-menu .user-menu-item a:hover,
#user-dropdown-menu .user-menu-item a:active,
#user-dropdown-menu .user-menu-item a:link {
    background: inherit;
}
#user-dropdown-menu .user-menu-item a:hover .user-menu-item-text span:first-child {
    color: #3699FF;
}
#welcome-text {
    color: #B5B5C3;
    font-size: 13px;
}
#welcome-text span {
    color: #7E8299;
    font-weight: 600;
}
#user-avatar-substitute {
    background-color: #C9F7F5;
    color: #1BC5BD;
    padding: 6px 12px;
    border-radius: 5px;
    font-weight: 500;
}


#top-nav li a {
    font-size: 13px;
    color: #6c7293;
    font-weight: 500;
    border-radius: 4px;
    transition-duration: 0s;
}
#top-nav li:not(:last-of-type) {
    margin-right: 7px;
}
#top-nav li a.active,
#top-nav li a:hover {
    background: rgba(77, 89, 149, 0.06);
    color: #3699FF;
}

